Fix help center icon on Safari

--- a/source/assets/stylesheets/components/_help-center-widget.scss
+++ b/source/assets/stylesheets/components/_help-center-widget.scss
@@ -31,6 +31,8 @@
 
     .close { 
       display: inline-block;
+      top: 25px;
+      left: 23px;
     }
   }
 
@@ -40,8 +42,6 @@
     right: 5px;
     width: 60px;
     height: 60px;
-    line-height: 60px;
-    text-align: center;
     border-radius: 50%;
     background: $blue;
     box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.4);
@@ -51,6 +51,12 @@
       bottom: 30px;
       right: 30px;
     }  
+
+    svg {
+      position: absolute;
+      top: 17px;
+      left: 15px;
+    }
 
     &:before {
       content: '';
